--- a/uebungen/05.variablen.md
+++ b/uebungen/05.variablen.md
@@ -30,7 +30,8 @@ var*iable
 Welche Zeichen sind in Variablennamen denn zulässig bzw. nicht zulässig?
 
 ### 7. Escpaping
-Setze eine Varaibel `somestring`, die folgende Wert haben soll: `Ich bin der Inhalt der Variablen 'somestring'`. Gibt es dafür nur eine Möglichkeit oder mehrere?
+Setze eine Variabel `somestring`, die folgende Wert haben soll: `Ich bin der Inhalt der Variablen 'somestring'`. Gibt es dafür nur eine Möglichkeit oder mehrere?
+
 
 ### 8. Variablen in Variablen
 Erstellt eine Variable namens `mein_home` und weise ihr den Wert der Umgebungsvariable `HOME` zu.
@@ -39,8 +40,10 @@ Erstellt eine Variable namens `mein_home` und weise ihr den Wert der Umgebungsva
 
 Erstellt eine Variable namens `vorname` und weist ihr euren Vornamen zu. Erstellt eine weitere Variable namens `nachname` und weist ihr eueren Nachnamen zu. Erstelle eine dritte Variable namens `voller_name` welche euren Vornamen und Nachnamen durch ein Leerzeichen getrennt enthalten soll.
 
+Wie viele verschiedene Möglichkeiten findet ihr hier?
+
 ### 10. Kombination von Variablen und Text
-Erstellt eine Variable `betriebssystem` mit dem Wert `Linux` und eine weitere Variable `wahnsinn`, welcher ihr einen Wert wie `super`, `megagut`, `einfach nur klasse` oder `super logisch und eigentlich ganz einfach` zuweist. Lasst euch mit echo nun folgendes ausgeben: `Ich nutze <betriebssystem> und es ist einfach <wahnsinn>.`. Datei sollen natürlich die Variablen genutzt und durch ihren Wert ersetzt werden.
+Erstellt eine Variable `betriebssystem` mit dem Wert `Linux` und eine weitere Variable `wahnsinn`, welcher ihr einen Wert wie `super`, `megagut`, `einfach nur klasse` oder `super logisch und eigentlich ganz einfach` zuweist. Lasst euch mit `echo` nun folgendes ausgeben: `Ich nutze <betriebssystem> und es ist einfach <wahnsinn>.`. Datei sollen natürlich die beiden Variablen genutzt und durch ihren Wert ersetzt werden.
 
 ### 11. Länge einer Variablen ermitteln
 Setze eine Variable `text` mit einem beliebigen Wert und gib deren Länge aus.
