edit ex redirects

--- a/uebungen/06.redirects.md
+++ b/uebungen/06.redirects.md
@@ -86,7 +86,7 @@ Erstellt eine Datei `i_am_and_today_is.txt` (ohne Editor, nur über Redirects) m
 ```bash
 Hallo, ich bin <username> und heute ist der <dd.mm.JJJJ>, es ist <hh:mm>.
 ```
-Nutzt dafür `echo`, `date`, eine Systemvariable und Redirects. Löst die Aufgabe ruhig in 3 Schritten, nicht auf einmal.
+Nutzt dafür `echo`, `date`, eine Systemvariable, das Konzept der Kommandosubstitution und Redirects. Löst die Aufgabe ruhig in 3 Schritten, nicht auf einmal.
 
 ## Profi Übungen
 
