edit ex redirects

--- a/uebungen/06.redirects.md
+++ b/uebungen/06.redirects.md
@@ -63,7 +63,9 @@ Versucht das doch mal. Hierfür müsst ihr den _umgedrehten Redirect_ `<` verwen
 ```
 kommando < datei-an-kommando-über-stdin
 ```
-Prüft anschliessend, ob die Änderungen, die `tr` gemacht hat, auch wirklich in die Datei übernommen wurden. Falls nicht - wie könnt ihr trotzdem eine Datei erhalten, die Semikolons anstatt Kommas als Trennzeichen nutzt?
+1. Nutzt also `tr`, um die Kommas in der Datei durch Semikolons zu ersetzen.
+
+2. Prüft anschließend, ob die Änderungen, die `tr` gemacht hat, auch wirklich in die Datei übernommen wurden. Falls nicht - wie könnt ihr trotzdem eine Datei erhalten, die Semikolons anstatt Kommas als Trennzeichen nutzt?
 
 ### 9. Kommando `tee`
 Öffnet die Manpage zum Kommando `tee` und informiert euch darüber. Wofür könnte dieses Kommando nützlich sein und wie funktioniert es? Was sind die Unterschiede zu den Redirects `>` und `>>`?
