--- a/uebungen/06.redirects.md
+++ b/uebungen/06.redirects.md
@@ -35,9 +35,9 @@ ls existing-dir non-existing-dir
 Erstellt dazu ggf. ein Verzeichnis mit dem Namen `existing-dir` mit ein paar Dateien darin. Das Verzeichnis `non-existing-dir` sollte auf eurem System **nicht** vorhanden sein.
 
 ### 6. Umleiten der Standardausgabe und Standardfehlerausgabe in dieselbe Datei
-Führet ein Kommando aus, das sowohl die normale Ausgabe als auch die Fehlermeldungen in `ausgabe-und-fehler.log` speichert.
+Führt ein Kommando aus, das sowohl die normale Ausgabe als auch die Fehlermeldungen in `ausgabe-und-fehler.log` speichert.
 
-Gibt es dafür meherer Möglichkeiten? Welche bzw. wie viele findet ihr heraus bzw. könnt ihr euch herleiten?
+Gibt es dafür mehrere Möglichkeiten? Welche bzw. wie viele findet ihr heraus bzw. könnt ihr euch herleiten?
 
 ## Weiterführende Übungen
 
@@ -88,7 +88,9 @@ Erstellt eine Datei `i_am_and_today_is.txt` (ohne Editor, nur über Redirects) m
 ```bash
 Hallo, ich bin <username> und heute ist der <dd.mm.JJJJ>, es ist <hh:mm>.
 ```
-Nutzt dafür `echo`, `date`, eine Systemvariable, das Konzept der Kommandosubstitution und Redirects. Löst die Aufgabe ruhig in 3 Schritten, nicht auf einmal.
+Nutzt dafür `echo`, `date`, eine Systemvariable, das Konzept der Kommandosubstitution und Redirects.
+
+Löst die Aufgabe ruhig in 3 Schritten, nicht auf einmal.
 
 ## Profi Übungen
 
@@ -100,7 +102,7 @@ exec > ~/exec-ausgabe.txt
 ```
 Es scheint nichts zu passieren. Tippt nun `whoami` ein. Hm, keine Ausgabe. Vielleicht klappt ja `ls`? Auch nicht? Eieiei. Öffnet eine weitere Shell und führt dort folgendes Kommando aus `tail -f ~/exec-ausgabe.txt`.
 
-Wechselt nun zurück in die Shell, in der ihr `exec > ~/exec-ausgabe.txt` ausgeführt habt und führt weitere Kommandos aus. Was beobachtet ihr in der anderen Shell mit `tail`? Könnt ihr euch das erklären? Wie bringen wir die Shell dazu, wieder die Ausgabe von Kommandos anzuzeigen? Probiert vielleicht einaml `exec /dev/tty`. Puuh...
+Wechselt nun zurück in die Shell, in der ihr `exec > ~/exec-ausgabe.txt` ausgeführt habt und führt weitere Kommandos aus. Was beobachtet ihr in der anderen Shell mit `tail`? Könnt ihr euch das erklären? Wie bringen wir die Shell dazu, wieder die Ausgabe von Kommandos anzuzeigen? Probiert vielleicht einmal `exec /dev/tty`. Puuh...
 
 ### 15. Nutzung von Descriptoren zur Umleitung
 Experimentiert mit Datei-Deskriptoren (`3>`, `4>`), um zusätzliche Umleitungen zu erstellen und den Inhalt in mehrere Dateien zu schreiben.
