edit ex pipes 1 and add pipes2

--- a/uebungen/07.1.pipelines-1.md
+++ b/uebungen/07.1.pipelines-1.md
@@ -21,8 +21,11 @@ Gebt mit `grep` ausschließlich die User aus der `/etc/passwd` aus, die die BASH
 ## Übung 5: Nur die Benutzernamen ausgeben
 Gebt mit `cut` ausschliesslich die Login-Namen der Benutzer auf dem System aus.
 
-## Übung 6: Die letzten 5 Zeilen der `.bashrc` ausgeben
-Gebt mit `tail` nur die letzten 5 Zeilen der `.bashrc` aus.
+## Übung 6: Die letzte Zeile der `.bashrc` ausgeben
+Gebt mit `tail` nur die  letzte Zeile der `.bashrc` aus.
+
+## Übung 7: Die ersten zwei Zeilen der `.bashrc` ausgeben
+Gebt mit `head` nur die ersten 2 Zeilen der `.bashrc` aus.
 
 ## Übung 7: Die Anzahl der Shells im System ermitteln
 Zählt die in `/etc/passwd` eingetragenen Shell. Wie viele verschiedene gibt es? Eventuell könnten hier die Kommandos `sort` und `uniq` nützlich sein.
