add note to pipes1

--- a/uebungen/07.1.pipelines-1.md
+++ b/uebungen/07.1.pipelines-1.md
@@ -16,7 +16,10 @@ Gebt mit `grep` ausschließlich die Zeile aus der `/etc/passwd` aus, in der etwa
 Gebt mit `grep` ausschließlich die Zeile aus der `/etc/passwd` aus, in der etwas zum User `root` steht.
 
 ## Übung 4: Nur bestimmte Benutzer in `/etc/passwd` ausgeben
-Gebt mit `grep` ausschließlich die User aus der `/etc/passwd` aus, die die BASH als Login Shell nutzen (gesamte Zeilen).
+Gebt mit `grep` ausschließlich die User aus der `/etc/passwd` aus, die die BASH als Login Shell nutzen (gesamte Zeilen). 
+
+> [!NOTE] 
+> Schaut hierzu vielleicht noch einmal in die Manpage zur Datei `/etc/passwd`. Hier steht etwas zur dem User zugewiesenen Shell bzw. dem *Kommando Interpreter*.
 
 ## Übung 5: Nur die Benutzernamen ausgeben
 Gebt mit `cut` ausschliesslich die Login-Namen der Benutzer auf dem System aus.
