--- a/uebungen/07.2.pipelines-2.md
+++ b/uebungen/07.2.pipelines-2.md
@@ -5,15 +5,20 @@
 > Auch die Kommandos `cut`, `sort` und `uniq` könnten euch weiterhelfen.
 > Der Aufbau der Datei `/etc/passwd` könnt ihr euch mit `man 5 passwd` anschauen.
 
-## Übung 6: Nur die Benutzernamen ausgeben
-Gebt ausschliesslich die Benutzernamen aus der `/etc/passwd` alphabetisch sortiert aus.
+## Übung 9: Die Benutzernamen alphabetisch sortiert ausgeben
+Gebt ausschließlich die Benutzernamen aus der `/etc/passwd` alphabetisch sortiert aus.
 
-## Übung 7: Benutzer mit `grep` und `wc` zählen
+## Übung 10: Ermitteln der Anzahl der Prozessoren auf dem System
+Ermittelt über die Datei `/proc/cpuinfo` die Anzahl der Prozessoren eures Rechners.
+
+Schaut euch die Datei dazu im Vorfeld einmal mit `less` an. Benutzt dann die Kommandos `grep` und `wc`. Oder geht das auch nur mit `grep`? 
+
+## Übung 11: Benutzer mit `grep` und `wc` zählen
 1. Zählt die Anzahl der Benutzer, die die  `bash` als Login-Shell zugewiesen haben.
-2. Zählt die Anzahl der Benutzer, die **nicht** die  `bash` als Login-Shell zugewiesen haben.
+2. Zählt die Anzahl der Benutzer, die **nicht** die  `bash` als Login-Shell zugewiesen haben. Achtet hierfür auf den obigen Hinweis.
 
 ### Zusatz
-3. Schreibt das Ergebnis mit Redirects in die Datei `~/anzahl_user_bash.txt`, `<anzahl>` soll dabei die Anzahl der Zeilen angeben und nicht **händisch** eingegeben werden, sondern über obiges Kommando ermittelt werden:
+3. Schreibt das Ergebnis mit Redirects in die Datei `~/anzahl_user_bash.txt`, `<anzahl>` soll dabei die Anzahl der Zeilen angeben und **nicht händisch** eingegeben werden, sondern über ein Kommando ermittelt werden:
 ```bash
 Anzahl Benutzer, die die BASH nutzen: 
 <anzahl>
@@ -24,33 +29,22 @@ Macht das ruhig in zwei Schritten, schreibt also zuerst die erste Zeile in die D
 ```bash
 Anzahl Benutzer, die die BASH nutzen: <anzahl>
 ```
-Also alles in einer Zeile anstatt in zwei?
+Also alles in einer Zeile anstatt in zwei? Werft vielleicht mal einen Blick in die Manpage von `echo`.
 
-## Übung 8: Benutzer und ihre Shells anzeigen
-1. Gebt ausschließlich die Benutzernamen und die Shell der Benutzer aus, die die BASH als Login-Shell nutzen.
-2. Gebt ausschließlich die Benutzernamen und die Shell der Benutzer aus, die **nicht** die BASH als Login-Shell nutzen.
+## Übung 12: Benutzer und ihre Shells anzeigen
+1. Gebt ausschließlich die **Benutzernamen** und die **Shell** der Benutzer aus, die die BASH als Login-Shell nutzen.
+2. Gebt ausschließlich die **Benutzernamen** und die **Shell** der Benutzer aus, die **nicht** die BASH als Login-Shell nutzen.
 
-## Übung 9: Vollnamen der Benutzer auflisten
-1. Ermittelt nun alle Vollnamen bzw. *Kommentare* der Benutzer, die die BASH als Login Shell benutzen und schreibt das Ergebnis in eine Datei. Die Datei soll nachher wirklich nur die Namen der Benutzer (also z.B. *Tux Tuxedo*) enthaltenen und keine weiteren Zeichen.
+## Übung 13: Vollnamen der Benutzer auflisten
+1. Gebt nun ausschließlich alle Vollnamen bzw. *Kommentare* der Benutzer, die die BASH als Login Shell benutzen aus und schreibt das Ergebnis in eine Datei. Die Datei soll nachher wirklich nur die Namen der Benutzer (also z.B. *Tux Tuxedo*) enthaltenen und keine weiteren Zeichen.
 
-## Übung 10: Alle Aliase in der `.bashrc` finden
-1. Gebt mit `grep` alle Zeilen in der `~/.bashrc` aus, in denen etwas zu Aliasen steht.
-2. Schafft ihr es auch, ausschliesslich die Zeilen auszugeben, in denen wirklich konkrete und im System gültige Alias-Definitionen stehen? Eliminiert z.B. alle Zeilen von der Ausgabe, die nur Kommentare sind (also mit einer Raute `#` beginnen). 
+## Übung 14: Alle für den User definierten Aliase finden
+1. Gebt mit `grep` alle Zeilen aus der `~/.bashrc` aus, in denen etwas zu Aliasen steht, also irgenwie die Zeichenkette `alias` oder auch `Alias` vorkommt.
+2. Schafft ihr es auch, ausschließlich die Zeilen auszugeben, in denen wirklich konkrete und im System gültige Alias-Definitionen stehen? Eliminiert z.B. alle Zeilen von der Ausgabe, die nur Kommentare sind (also mit einer Raute `#` beginnen). 
 2. Werden denn jetzt wirklich nur Alias-Definitionen angezeigt oder auch noch andere Zeilen? Falls ja, versucht auch diese **nicht** mit auszugeben, so dass ihr letztlich nur Zeilen angezeigt bekommt, in denen wirklich Aliase definiert werden.
-3. Durchsucht nun euer gesamtes Home-Verzeichnis nach gültigen Alias-Definitionen. Erstellt dazu im Vorfeld (falls nicht bereits vorhanden) die Datei `~/.bash_aliases` mit ein paar Alias-Definitionen. Ihr müsst `grep` hier dazu überreden ein **Verzeichnis** zu durchsuchen, nicht nur eine einzelne Datei.
+3. Durchsucht nun euer gesamtes Home-Verzeichnis nach gültigen Alias-Definitionen. Erstellt dazu im Vorfeld (falls nicht bereits vorhanden) die Datei `~/.bash_aliases` mit ein paar Alias-Definitionen. Ihr müsst `grep` nun dazu überreden ein **Verzeichnis** zu durchsuchen, nicht nur eine einzelne Datei.
 
-## Übung 11: Archiv aller `.bash*`-Dateien erstellen
-Erstellt ein `tar`-Archiv mit allen `.bash*`-Dateien in eurem Home-Verzeichnis. Zählt **gleichzeitig** die Anzahl der im Archiv enthaltenen Dateien.
-
->[NOTE]
-> Diese Übung setzt Wissen über das Kommando `tar` voraus. Überspring diese Übung, falls ihr das Kommando noch nicht kennt.
-
-## Übung 12: Ermitteln der Anzahl der Prozessoren auf dem System
-Ermittelt über die Datei `/proc/cpuinfo` die Anzahl der Prozessoren eures Rechners.
-
-Schaut euch die Datei dazu im Vorfeld einmal an. Benutzt die Kommandos `grep` und `wc`. Oder geht das auch nur mit `grep`? 
-
-## Übung 13: Ermitteln der Sieger einer Tombola
+## Übung 15: Ermitteln der Sieger einer Tombola
 Erstellt eine Datei mit dem Namen `~/mypasswd` auf eurem System mit folgendem Inhalt:
 
 ```bash
@@ -72,6 +66,16 @@ john:x:1006:1000:John Chapel,Accounts Payable,,,Main Office:/home/john:/bin/bash
 ```
 1. Lasst euch alle Benutzer in der Gruppe `1000` anzeigen.
 2. Lasst euch nur die vollen Namen der Benutzer in dieser Gruppe anzeigen.
-3. Ihr sollt nun unter allen Mitgliedern des *Main Office* einen Sieger für eine Tombola ermitteln. Ermittlelt die Vollnamen der Mitglieder des Main Office, sorgt dann dafür, dass euch nur die Vornamen angezeigt werden. Sortiert diese anschliessend zufällig. Lasst euch nun nur die erste Zeile ausgeben und ihr habt euren Gewinner.
+3. Ihr sollt nun unter allen Mitgliedern des *Main Office* einen Sieger für eine Tombola ermitteln:
+  - Ermittelt die Vollnamen der Mitglieder des Main Office. 
+  - Sorgt dann dafür, dass euch nur die Vornamen angezeigt werden. 
+  - Sortiert diese anschliessend zufällig. 
+  - Lasst euch nun nur die erste Zeile ausgeben und ihr habt euren Gewinner.
 4. Wieviele Leute arbeiten jeweils in `Human Resources`, `Engineering` und `Accounts Payable`? Versucht, die Lösung mit einem einzigen Kommando zu ermitteln. Eventuell ist ja das Kommando `uniq` hier hilfreich.
+
+## Übung 16: Archiv aller `.bash*`-Dateien erstellen
+Erstellt ein `tar`-Archiv mit allen `.bash*`-Dateien in eurem Home-Verzeichnis. Zählt **gleichzeitig** die Anzahl der im Archiv enthaltenen Dateien.
+
+>[NOTE]
+> Diese Übung setzt weiteres Wissen z.B. über das Kommando `tar` voraus aber auch andere Konzepte voraus. Lasst diese Übung also einfach aus, falls ihr das Kommando noch nicht kennt bzw. wir es noch nicht besprochen haben. Oder informiert euch darüber... `tar` besprechen wir auch noch!
 
