--- a/uebungen/08.tar.md
+++ b/uebungen/08.tar.md
@@ -4,6 +4,8 @@
 > Das Kommando `tar` ist schon ziemlich alt und eventuell ein wenig "sperrig" oder "eigen". Die Kurzoptionen scheinen einfach nicht zu den Langoptionen zu passen. Das hat historische Gründe. Nehmt es vielleicht einfach hin...
 > Versucht die folgenden Übungen trotzdem zuerst mit Hilfe der Manpage zu lösen. Nutzt dafür die Suche (`/`), sucht nach Schlüsselwörtern oder überlegt euch, wie eine Option in der Langschreibweise heißen könnte. Falls die Manpage auf Englisch ist, überlegt euch den englischen Begriff für das Gesuchte.
 
+Netter Link in diesem Zusammenhang: [xkcd - tar](https://xkcd.com/1168/)
+
 ## Übung 1: Einfache Archivierung
 Erstelle ein Archiv aus mehreren Dateien.
 
@@ -42,18 +44,40 @@ Extrahiere nur eine bestimmte Datei aus einem `tar`-Archiv.
 Erstelle ein Archiv, das ein ganzes Verzeichnis enthält. Es soll also ein gesamtes Verzeichnis und nicht nur alle sich im Verzeichnis befindenden Dateien zum Archiv hinzugefügt werden.
 
 1. Erstelle ein Verzeichnis `mydir` und darin einige Dateien oder nutze ein bestehendes Verzeichnis mit Inhalt.
-2. Erstelle ein `tar`-Archiv, das das gesamte Verzeichnis `mydir` enthält. Verwende einen **relativen** Pfad zu diesem Verzeichnis.
-2. Erstelle ein weiteres `tar`-Archiv, das das gesamte Verzeichnis `mydir` enthält. Verwende diesmal einen **absoluten** Pfad zu diesem Verzeichnis.
+2. Erstelle ein `tar`-Archiv, das das gesamte Verzeichnis `mydir` enthält. Verwende einen **relativen** Pfad zu diesem Verzeichnis. Nenne das Archiv z.B. `mydir-rel-path.tar`.
+2. Erstelle ein **weiteres** `tar`-Archiv, das das gesamte Verzeichnis `mydir` enthält. Verwende diesmal einen **absoluten** Pfad zu diesem Verzeichnis. Nenne das Archiv z.B. `mydir-abs-path.tar`.
 3. Überprüfe den Inhalt der beiden Archive.
 4. Gab es vielleicht "Fehlermeldungen" von `tar`? Irgendwas mit "leading /" oder "führendem /". Was bedeutet dies Meldung? Warum macht `tar` das?
 4. Wie sieht es aus, wenn wir nur eine *einzelne* Datei aus dem Archiv mit den absoluten Pfaden extrahieren?
 
-## Übung 7: Archiv mit Dateiattributen erstellen
-Erstelle ein `tar`-Archiv unter Beibehaltung der Dateiattribute (Berechtigungen, Zeitstempel usw.).
+## Übung 7: Position der Option -t
 
-1. Setze spezielle Berechtigungen oder Zeitstempel auf einige Dateien. (Frage hier ggf. nach oder informiere dich z.B. über die Kommandos `touch` und `chmod`)
-2. Erstelle ein Archiv, das diese Dateien mit ihren Attributen speichert.
-3. Extrahiere das Archiv und prüfe, ob die Attribute erhalten bleiben.
+Erkläre, warum folgendes Kommando funktionert:
+```bash
+tar -tf archiv.tar
+tar -tvf archiv.tar
+```
+
+Und warum folgende Kommdos **nicht** funktionieren:
+```bash
+tar -ft archiv.tar
+tar -ftv archiv.tar
+tar -vft archiv.tar
+```
+
+Die Reihenfolge der Optionen war doch immer egal oder nicht? `ls -la` funktioniert doch genauso wie `ls -al`...? 
+
+- Warum ist das hier nicht der Fall? 
+- Liegt das an `tar`? Oder kannst du dazu eine Regel erkennen? Kann das also auch bei andern Kommandos passieren?
+
+**Zusatz:**
+
+Teste nun noch folgendes Kommando:
+```bash
+tar ft archiv.tar
+```
+
+Häääää??
 
 ## Übung 8: Differentielles Archiv erstellen
 Erstelle ein Archiv von Dateien, die seit einer bestimmten Zeit geändert wurden. Nutze dafür vielleicht das Archiv aus Übung 6.
@@ -65,22 +89,32 @@ Erstelle ein Archiv von Dateien, die seit einer bestimmten Zeit geändert wurden
 ## Übung 9: Beschädigtes Archiv überprüfen
 Überprüfe ein `tar`-Archiv auf Fehler.
 
-1. Erstelle ein `tar`-Archiv und Simuliere eine Beschädigung, indem du einige Bytes entfernst:
+1. Erstelle ein `tar`-Archiv und simuliere eine Beschädigung, indem du einige Bytes entfernst:
 ```sh
 truncate -s -10 backup.tar
 ```
-2. Versuche, es auf Fehler zu überprüfen.
+2. Versuche nun, es auf Fehler zu überprüfen, bzw. es zu *testen*.
 
 ## Übung 10: Archiv ohne bestimmte Dateien erstellen
-Erstelle ein Archiv, das bestimmte Dateien oder Dateitypen ausschließt.
+Erstelle ein Archiv, das bestimmte Dateien oder Dateitypen nicht enthält. 
 
-1. Erstelle verschiedene Dateitypen (`.txt`, `.log`, `.cfg`).
-2. Erstelle ein `tar`-Archiv, das alle Dateien außer `.log`-Dateien enthält.
+Es gibt Situationen, in denen wir ein Archiv aus vielen Dateien oder Verzeichnissen erstellen wollen, wir möchten bestimmte Dateien aber nicht darin haben, z.B. Log-Dateien, Cache-Dateien oder so. Dies wollen wir mit dieser Übung simulieren.
+
+1. Erstelle verschiedene Dateitypen in einem Verzeichnis, also Dateien mit Endungen wie z.B. `.txt`, `.log`, `.cfg`, `.pdf` etc.
+2. Erstelle nun ein `tar`-Archiv des gesamten Verzeichnisses, sorge aber dafür, dass `.log`-Dateien nicht darin enthalten sind.
 3. Überprüfe den Inhalt des Archivs, um sicherzustellen, dass `.log`-Dateien fehlen.
 
 ## Übung 11: Archiv an einem bestimmten Ort extrahieren
-Extrahiere das in der vorigen Übung erstellte Archiv in einem bestimmten Verzeichnis, ohne vorher dorthin zu navigieren.
+Extrahiere das in der vorigen Übung erstellte Archiv in einem bestimmten Verzeichnis, ohne vorher mit `cd` dorthin zu navigieren.
 
 1. Erstelle ein Verzeichnis in deinem Heimatverzeichnis mit dem Namen `some-dir-for-tar`.
-2. Wechsel **nicht** dorthinein, sondern extrahiere den Inhalt des Archivs in dieses Verzeichnis von dort aus, wo du dich gerade befindest.
+2. Wechsel **nicht** dort hinein, sondern extrahiere den Inhalt des Archivs in dieses Verzeichnis von dort aus, wo du dich gerade befindest, also von irgendeinem anderen Verzeichnis aus.
 3. Überprüfe, ob alles wie gewünscht funktioniert hat.
+
+## Übung 12: Archiv mit Dateiattributen erstellen
+Erstelle ein `tar`-Archiv als 
+
+1. Setze spezielle Berechtigungen oder Zeitstempel auf einige Dateien. (Frage hier ggf. nach oder informiere dich z.B. über die Kommandos `touch` und `chmod`)
+2. Erstelle ein Archiv, das diese Dateien mit ihren Attributen speichert.
+3. Extrahiere das Archiv und prüfe, ob die Attribute erhalten bleiben.
+
