--- a/uebungen/08.tar.md
+++ b/uebungen/08.tar.md
@@ -4,8 +4,6 @@
 > Das Kommando `tar` ist schon ziemlich alt und eventuell ein wenig "sperrig" oder "eigen". Die Kurzoptionen scheinen einfach nicht zu den Langoptionen zu passen. Das hat historische Gründe. Nehmt es vielleicht einfach hin...
 > Versucht die folgenden Übungen trotzdem zuerst mit Hilfe der Manpage zu lösen. Nutzt dafür die Suche (`/`), sucht nach Schlüsselwörtern oder überlegt euch, wie eine Option in der Langschreibweise heißen könnte. Falls die Manpage auf Englisch ist, überlegt euch den englischen Begriff für das Gesuchte.
 
-Netter Link in diesem Zusammenhang: [xkcd - tar](https://xkcd.com/1168/)
-
 ## Übung 1: Einfache Archivierung
 Erstelle ein Archiv aus mehreren Dateien.
 
@@ -13,11 +11,35 @@ Erstelle ein Archiv aus mehreren Dateien.
 2. Erstelle ein Archiv `backup.tar`, das diese drei Dateien enthält.
 3. Überprüfe (z.B. mit `ls` oder auch `cat`), ob das Archiv erfolgreich erstellt wurde.
 
+ # 1. Erstellt die drei leeren Dateien
+touch file1.txt file2.txt file3.txt
+
+# 2. Erstellt das Archiv backup.tar und fügt die drei Dateien hinzu.
+# Erstellt das Archiv backup.tar und fügt die drei Dateien hinzu
+tar -cf backup.tar file1.txt file2.txt file3.txt
+
+# Löscht die originalen Dateien
+rm file1.txt file2.txt file3.txt
+
+
 ## Übung 2: Archivinhalt anzeigen
 Zeige den Inhalt eines bestehenden `tar`-Archivs an.
 
 1. Verwende das zuvor erstellte `backup.tar`.
 2. Liste die enthaltenen Dateien auf, bzw. schaue dir den Inhalt des Archivs an.
+
+tar -tf backup.tar 
+#ist ein Kommando, das verwendet wird, um den Inhalt einer Archivdatei zu überprüfen, ohne die Dateien tatsächlich zu entpacken.
+
+tar: 
+Dies ist der Name des Programms, das für die Arbeit mit Archivdateien (sogenannten "Tape ARchive"-Dateien) verwendet wird.
+
+-t (list): 
+Diese Option steht für "test" oder "list". Sie weist tar an, den Inhalt des Archivs aufzulisten. Sie können damit sehen, welche Dateien im Archiv gespeichert sind und wie deren Pfade lauten.
+
+-f (file): 
+Diese Option steht für "file". Sie gibt an, dass der nächste Parameter, in diesem Fall backup.tar, der Name der Archivdatei ist, die bearbeitet werden soll. Ohne diese Option würde tar versuchen, die Daten von einem Bandlaufwerk zu lesen.
+
 
 ## Übung 3: Archiv erweitern
 Füge eine Datei zu einem bestehenden Archiv hinzu.
@@ -26,12 +48,20 @@ Füge eine Datei zu einem bestehenden Archiv hinzu.
 2. Füge diese Datei zum bestehenden `backup.tar`-Archiv hinzu.
 3. Überprüfe, ob die Datei nun zusätzlich im Archiv enthalten ist.
 
+# Erstellt eine neue leere Datei namens file4.txt
+touch file4.txt
+
+# Fügt file4.txt zum bestehenden Archiv backup.tar hinzu
+tar -rf backup.tar file4.txt
+
 ## Übung 4: Archiv extrahieren
 Entpacke ein `tar`-Archiv.
 
 1. Lösche die ursprünglichen `file1.txt`, `file2.txt`, `file3.txt` und `file4.txt`.
 2. Extrahiere alle Dateien aus `backup.tar`.
 3. Prüfe, ob die Dateien korrekt wiederhergestellt wurden.
+
+
 
 ## Übung 5: Einzelne Datei extrahieren
 Extrahiere nur eine bestimmte Datei aus einem `tar`-Archiv.
@@ -44,40 +74,18 @@ Extrahiere nur eine bestimmte Datei aus einem `tar`-Archiv.
 Erstelle ein Archiv, das ein ganzes Verzeichnis enthält. Es soll also ein gesamtes Verzeichnis und nicht nur alle sich im Verzeichnis befindenden Dateien zum Archiv hinzugefügt werden.
 
 1. Erstelle ein Verzeichnis `mydir` und darin einige Dateien oder nutze ein bestehendes Verzeichnis mit Inhalt.
-2. Erstelle ein `tar`-Archiv, das das gesamte Verzeichnis `mydir` enthält. Verwende einen **relativen** Pfad zu diesem Verzeichnis. Nenne das Archiv z.B. `mydir-rel-path.tar`.
-2. Erstelle ein **weiteres** `tar`-Archiv, das das gesamte Verzeichnis `mydir` enthält. Verwende diesmal einen **absoluten** Pfad zu diesem Verzeichnis. Nenne das Archiv z.B. `mydir-abs-path.tar`.
+2. Erstelle ein `tar`-Archiv, das das gesamte Verzeichnis `mydir` enthält. Verwende einen **relativen** Pfad zu diesem Verzeichnis.
+2. Erstelle ein weiteres `tar`-Archiv, das das gesamte Verzeichnis `mydir` enthält. Verwende diesmal einen **absoluten** Pfad zu diesem Verzeichnis.
 3. Überprüfe den Inhalt der beiden Archive.
 4. Gab es vielleicht "Fehlermeldungen" von `tar`? Irgendwas mit "leading /" oder "führendem /". Was bedeutet dies Meldung? Warum macht `tar` das?
 4. Wie sieht es aus, wenn wir nur eine *einzelne* Datei aus dem Archiv mit den absoluten Pfaden extrahieren?
 
-## Übung 7: Position der Option -t
+## Übung 7: Archiv mit Dateiattributen erstellen
+Erstelle ein `tar`-Archiv unter Beibehaltung der Dateiattribute (Berechtigungen, Zeitstempel usw.).
 
-Erkläre, warum folgendes Kommando funktionert:
-```bash
-tar -tf archiv.tar
-tar -tvf archiv.tar
-```
-
-Und warum folgende Kommdos **nicht** funktionieren:
-```bash
-tar -ft archiv.tar
-tar -ftv archiv.tar
-tar -vft archiv.tar
-```
-
-Die Reihenfolge der Optionen war doch immer egal oder nicht? `ls -la` funktioniert doch genauso wie `ls -al`...? 
-
-- Warum ist das hier nicht der Fall? 
-- Liegt das an `tar`? Oder kannst du dazu eine Regel erkennen? Kann das also auch bei andern Kommandos passieren?
-
-**Zusatz:**
-
-Teste nun noch folgendes Kommando:
-```bash
-tar ft archiv.tar
-```
-
-Häääää??
+1. Setze spezielle Berechtigungen oder Zeitstempel auf einige Dateien. (Frage hier ggf. nach oder informiere dich z.B. über die Kommandos `touch` und `chmod`)
+2. Erstelle ein Archiv, das diese Dateien mit ihren Attributen speichert.
+3. Extrahiere das Archiv und prüfe, ob die Attribute erhalten bleiben.
 
 ## Übung 8: Differentielles Archiv erstellen
 Erstelle ein Archiv von Dateien, die seit einer bestimmten Zeit geändert wurden. Nutze dafür vielleicht das Archiv aus Übung 6.
@@ -89,32 +97,22 @@ Erstelle ein Archiv von Dateien, die seit einer bestimmten Zeit geändert wurden
 ## Übung 9: Beschädigtes Archiv überprüfen
 Überprüfe ein `tar`-Archiv auf Fehler.
 
-1. Erstelle ein `tar`-Archiv und simuliere eine Beschädigung, indem du einige Bytes entfernst:
+1. Erstelle ein `tar`-Archiv und Simuliere eine Beschädigung, indem du einige Bytes entfernst:
 ```sh
 truncate -s -10 backup.tar
 ```
-2. Versuche nun, es auf Fehler zu überprüfen, bzw. es zu *testen*.
+2. Versuche, es auf Fehler zu überprüfen.
 
 ## Übung 10: Archiv ohne bestimmte Dateien erstellen
-Erstelle ein Archiv, das bestimmte Dateien oder Dateitypen nicht enthält. 
+Erstelle ein Archiv, das bestimmte Dateien oder Dateitypen ausschließt.
 
-Es gibt Situationen, in denen wir ein Archiv aus vielen Dateien oder Verzeichnissen erstellen wollen, wir möchten bestimmte Dateien aber nicht darin haben, z.B. Log-Dateien, Cache-Dateien oder so. Dies wollen wir mit dieser Übung simulieren.
-
-1. Erstelle verschiedene Dateitypen in einem Verzeichnis, also Dateien mit Endungen wie z.B. `.txt`, `.log`, `.cfg`, `.pdf` etc.
-2. Erstelle nun ein `tar`-Archiv des gesamten Verzeichnisses, sorge aber dafür, dass `.log`-Dateien nicht darin enthalten sind.
+1. Erstelle verschiedene Dateitypen (`.txt`, `.log`, `.cfg`).
+2. Erstelle ein `tar`-Archiv, das alle Dateien außer `.log`-Dateien enthält.
 3. Überprüfe den Inhalt des Archivs, um sicherzustellen, dass `.log`-Dateien fehlen.
 
 ## Übung 11: Archiv an einem bestimmten Ort extrahieren
-Extrahiere das in der vorigen Übung erstellte Archiv in einem bestimmten Verzeichnis, ohne vorher mit `cd` dorthin zu navigieren.
+Extrahiere das in der vorigen Übung erstellte Archiv in einem bestimmten Verzeichnis, ohne vorher dorthin zu navigieren.
 
 1. Erstelle ein Verzeichnis in deinem Heimatverzeichnis mit dem Namen `some-dir-for-tar`.
-2. Wechsel **nicht** dort hinein, sondern extrahiere den Inhalt des Archivs in dieses Verzeichnis von dort aus, wo du dich gerade befindest, also von irgendeinem anderen Verzeichnis aus.
+2. Wechsel **nicht** dorthinein, sondern extrahiere den Inhalt des Archivs in dieses Verzeichnis von dort aus, wo du dich gerade befindest.
 3. Überprüfe, ob alles wie gewünscht funktioniert hat.
-
-## Übung 12: Archiv mit Dateiattributen erstellen
-Erstelle ein `tar`-Archiv als 
-
-1. Setze spezielle Berechtigungen oder Zeitstempel auf einige Dateien. (Frage hier ggf. nach oder informiere dich z.B. über die Kommandos `touch` und `chmod`)
-2. Erstelle ein Archiv, das diese Dateien mit ihren Attributen speichert.
-3. Extrahiere das Archiv und prüfe, ob die Attribute erhalten bleiben.
-
