--- a/uebungen/08.tar.md
+++ b/uebungen/08.tar.md
@@ -19,28 +19,54 @@ Zeige den Inhalt eines bestehenden `tar`-Archivs an.
 1. Verwende das zuvor erstellte `backup.tar`.
 2. Liste die enthaltenen Dateien auf, bzw. schaue dir den Inhalt des Archivs an.
 
-## Übung 3: Archiv erweitern
+## Übung 3: Position der Option -t
+
+Erkläre, warum folgende Kommando funktioneren:
+```bash
+tar -tf archiv.tar
+tar -tvf archiv.tar
+```
+Und warum folgende Kommandos **nicht** funktionieren:
+```bash
+tar -ft archiv.tar
+tar -ftv archiv.tar
+tar -vft archiv.tar
+```
+Die Reihenfolge der Optionen war doch immer egal oder nicht? `ls -la` funktioniert doch genauso wie `ls -al`...? 
+
+- Warum ist das hier nicht der Fall? 
+- Liegt das an `tar`? Oder kannst du dazu eine Regel erkennen? Kann das also auch bei andern Kommandos passieren?
+
+Teste abschließend doch nochmal kurz folgendes Kommando:
+```bash
+tar ft archiv.tar
+```
+Na prima...
+
+:hushed: :confounded: :cry: :boom:
+
+## Übung 4: Archiv erweitern
 Füge eine Datei zu einem bestehenden Archiv hinzu.
 
 1. Erstelle eine neue Datei `file4.txt`.
 2. Füge diese Datei zum bestehenden `backup.tar`-Archiv hinzu.
 3. Überprüfe, ob die Datei nun zusätzlich im Archiv enthalten ist.
 
-## Übung 4: Archiv extrahieren
+## Übung 5: Archiv extrahieren
 Entpacke ein `tar`-Archiv.
 
 1. Lösche die ursprünglichen `file1.txt`, `file2.txt`, `file3.txt` und `file4.txt`.
 2. Extrahiere alle Dateien aus `backup.tar`.
 3. Prüfe, ob die Dateien korrekt wiederhergestellt wurden.
 
-## Übung 5: Einzelne Datei extrahieren
+## Übung 6: Einzelne Datei extrahieren
 Extrahiere nur eine bestimmte Datei aus einem `tar`-Archiv.
 
 1. Lösche nun die Dateien `file1.txt`, `file2.txt`, `file3.txt` und `file4.txt`.
 2. Extrahiere nur `file2.txt` aus `backup.tar`.
 3. Stelle sicher, dass die anderen Dateien nicht erneut extrahiert wurden.
 
-## Übung 6: Archiv mit Verzeichnis erstellen
+## Übung 7: Archiv mit Verzeichnis erstellen
 Erstelle ein Archiv, das ein ganzes Verzeichnis enthält. Es soll also ein gesamtes Verzeichnis und nicht nur alle sich im Verzeichnis befindenden Dateien zum Archiv hinzugefügt werden.
 
 1. Erstelle ein Verzeichnis `mydir` und darin einige Dateien oder nutze ein bestehendes Verzeichnis mit Inhalt.
@@ -49,35 +75,6 @@ Erstelle ein Archiv, das ein ganzes Verzeichnis enthält. Es soll also ein gesam
 3. Überprüfe den Inhalt der beiden Archive.
 4. Gab es vielleicht "Fehlermeldungen" von `tar`? Irgendwas mit "leading /" oder "führendem /". Was bedeutet dies Meldung? Warum macht `tar` das?
 4. Wie sieht es aus, wenn wir nur eine *einzelne* Datei aus dem Archiv mit den absoluten Pfaden extrahieren?
-
-## Übung 7: Position der Option -t
-
-Erkläre, warum folgendes Kommando funktionert:
-```bash
-tar -tf archiv.tar
-tar -tvf archiv.tar
-```
-
-Und warum folgende Kommdos **nicht** funktionieren:
-```bash
-tar -ft archiv.tar
-tar -ftv archiv.tar
-tar -vft archiv.tar
-```
-
-Die Reihenfolge der Optionen war doch immer egal oder nicht? `ls -la` funktioniert doch genauso wie `ls -al`...? 
-
-- Warum ist das hier nicht der Fall? 
-- Liegt das an `tar`? Oder kannst du dazu eine Regel erkennen? Kann das also auch bei andern Kommandos passieren?
-
-**Zusatz:**
-
-Teste nun noch folgendes Kommando:
-```bash
-tar ft archiv.tar
-```
-
-Häääää??
 
 ## Übung 8: Differentielles Archiv erstellen
 Erstelle ein Archiv von Dateien, die seit einer bestimmten Zeit geändert wurden. Nutze dafür vielleicht das Archiv aus Übung 6.
