--- a/uebungen/08.tar.md
+++ b/uebungen/08.tar.md
@@ -19,7 +19,7 @@ Zeige den Inhalt eines bestehenden `tar`-Archivs an.
 1. Verwende das zuvor erstellte `backup.tar`.
 2. Liste die enthaltenen Dateien auf, bzw. schaue dir den Inhalt des Archivs an.
 
-## Übung 3: Position der Option -t
+## Übung 3: Position der Option -f
 
 Erkläre, warum folgende Kommando funktioneren:
 ```bash
