--- a/uebungen/08.tar.md
+++ b/uebungen/08.tar.md
@@ -66,15 +66,17 @@ Extrahiere nur eine bestimmte Datei aus einem `tar`-Archiv.
 2. Extrahiere nur `file2.txt` aus `backup.tar`.
 3. Stelle sicher, dass die anderen Dateien nicht erneut extrahiert wurden.
 
-## Übung 7: Archiv mit Verzeichnis erstellen
+## Übung 7: Archiv erstellen - relative und absolute Pfadangaben
 Erstelle ein Archiv, das ein ganzes Verzeichnis enthält. Es soll also ein gesamtes Verzeichnis und nicht nur alle sich im Verzeichnis befindenden Dateien zum Archiv hinzugefügt werden.
 
 1. Erstelle ein Verzeichnis `mydir` und darin einige Dateien oder nutze ein bestehendes Verzeichnis mit Inhalt.
 2. Erstelle ein `tar`-Archiv, das das gesamte Verzeichnis `mydir` enthält. Verwende einen **relativen** Pfad zu diesem Verzeichnis. Nenne das Archiv z.B. `mydir-rel-path.tar`.
 2. Erstelle ein **weiteres** `tar`-Archiv, das das gesamte Verzeichnis `mydir` enthält. Verwende diesmal einen **absoluten** Pfad zu diesem Verzeichnis. Nenne das Archiv z.B. `mydir-abs-path.tar`.
-3. Überprüfe den Inhalt der beiden Archive.
-4. Gab es vielleicht "Fehlermeldungen" von `tar`? Irgendwas mit "leading /" oder "führendem /". Was bedeutet dies Meldung? Warum macht `tar` das?
-4. Wie sieht es aus, wenn wir nur eine *einzelne* Datei aus dem Archiv mit den absoluten Pfaden extrahieren?
+3. Überprüfe den Inhalt der beiden Archive und schaue dir die Pfadangaben zu den Dateien an. Fällt dir hier etwas darüber auf, inwieweit sich `tar` unterschiedlich verhält, je nachdem ob wir einen relativen oder absoluten Pfad zu einer Datei bzw. einem Verzeichnis angeben?
+4. Gab es vielleicht "Fehlermeldungen" von `tar` beim Erstellen des Archivs mit den absoluten Pfaden? Irgendwas mit `Removing leading /` oder so? Setze diese Meldung in Kontext zu den Pfadangaben die du siehst, wenn du dir den Inhalt dieses Archivs anzeigen lässt.
+5. Was schliesst du daraus über die Arbeitsweise von `tar` bezüglich Pfadangaben? 
+6. Warum macht `tar` das so? Denke hierbei an den Einsatz von `tar` als Backup-Tool.
+7. Vielleicht wird der Umstand noch deutlicher, wenn du nur eine *einzelne* Datei aus dem Archiv mit den absoluten Pfaden extrahierst und dir anschliessend die Verzeichnisstruktur anschaust.
 
 ## Übung 8: Differentielles Archiv erstellen
 Erstelle ein Archiv von Dateien, die seit einer bestimmten Zeit geändert wurden. Nutze dafür vielleicht das Archiv aus Übung 6.
