--- a/uebungen/09.komprimierung.md
+++ b/uebungen/09.komprimierung.md
@@ -20,7 +20,7 @@ dd if=/dev/zero of=bigfile3.data bs=1M count=1024
 ```
 **Erklärung:** `dd` liest hier von der Gerätedatei `/dev/zero/` 1024 Blöcke mit Nullbytes zu je 1MB ein und erstellt daraus die Datei `bigfile1.data` im aktuellen Verzeichnis. Das Resultat ist eine 1 GB grosse Datei.
 
-### 1. Komprimieren einzelner Dateien ohne Tar
+### 1. Komprimieren einzelner Dateien
 Verwendet `gzip`, `bzip2` und `xz`, um eine einzelne Datei direkt zu komprimieren. 
 
 1. Komprimiert zuerst `bigfile1.data` mit `gzip`, dann `bigfile2.data` mit `bzip2` und `bigfile3.data` mit `xz`. Was fällt euch auf? Was ist mit den Originaldateien passiert? Schaut vielleicht in den Manpages mal nach der Option `-k`.
