edit ex compression

--- a/uebungen/09.komprimierung.md
+++ b/uebungen/09.komprimierung.md
@@ -14,16 +14,16 @@ time
 1. Erstellt ein Verzeichnis `uebungen-kompression` für die Übungen und wechselt hinein.
 2. Erstellt für die Übungen drei Testdateien mit dem Kommando `dd` wie folgt:
 ```bash
-dd if=/dev/zero of=bigfile1.data bs=1M count=1024
-dd if=/dev/zero of=bigfile2.data bs=1M count=1024
-dd if=/dev/zero of=bigfile3.data bs=1M count=1024
+dd if=/dev/zero of=bigfile_gzip.data bs=1M count=1024
+dd if=/dev/zero of=bigfile_bzip2.data bs=1M count=1024
+dd if=/dev/zero of=bigfile_xz.data bs=1M count=1024
 ```
-**Erklärung:** `dd` liest hier von der Gerätedatei `/dev/zero/` 1024 Blöcke mit Nullbytes zu je 1MB ein und erstellt daraus die Datei `bigfile1.data` im aktuellen Verzeichnis. Das Resultat ist eine 1 GB grosse Datei.
+**Erklärung:** `dd` liest hier von der Gerätedatei `/dev/zero/` 1024 Blöcke mit Nullbytes zu je 1MB ein und erstellt daraus die Datei `bigfile_gzip.data` im aktuellen Verzeichnis. Das Resultat ist eine 1 GB grosse Datei.
 
 ### 1. Komprimieren einzelner Dateien
-Verwendet `gzip`, `bzip2` und `xz`, um eine einzelne Datei direkt zu komprimieren. 
+Verwendet nacheinander `gzip`, `bzip2` und `xz`, um eine einzelne Datei direkt zu komprimieren. 
 
-1. Komprimiert zuerst `bigfile1.data` mit `gzip`, dann `bigfile2.data` mit `bzip2` und `bigfile3.data` mit `xz`. Was fällt euch auf? Was ist mit den Originaldateien passiert? Schaut vielleicht in den Manpages mal nach der Option `-k`.
+1. Komprimiert zuerst `bigfile_gzip.data` mit `gzip`, dann `bigfile_bzip2.data` mit `bzip2` und `bigfile_xz.data` mit `xz`. Was fällt euch auf? Was ist mit den Originaldateien passiert? Schaut vielleicht in den Manpages mal nach der Option `-k`.
 2. Messt mit dem Kommando `time` wie lange die einzelenen Komprimierungsalgorithmen zur Komprimierung.
 ```bash
 time <kommando>
