clarified ex compression

--- a/uebungen/09.komprimierung.md
+++ b/uebungen/09.komprimierung.md
@@ -20,33 +20,36 @@ dd if=/dev/zero of=bigfile_xz.data bs=1M count=1024
 ```
 **Erklärung:** `dd` liest hier von der Gerätedatei `/dev/zero/` 1024 Blöcke mit Nullbytes zu je 1MB ein und erstellt daraus die Datei `bigfile_gzip.data` im aktuellen Verzeichnis. Das Resultat ist eine 1 GB grosse Datei.
 
+>[!NOTE]
+> Wenn euch die Komprimierung und Dekomprimierung mit den drei 1GB grossen Dateien zu lange dauern sollte, könnt ihr auch weniger grosse Dateien erstellen. Dazu übergebt ihr mit `count` einfach einen anderen Wert, z.B. `512`.
+```bash
+dd if=/dev/zero of=mediumfile_gzip.data bs=1M count=512
+```
 ### 1. Komprimieren einzelner Dateien
 Verwendet nacheinander `gzip`, `bzip2` und `xz`, um eine einzelne Datei direkt zu komprimieren. 
 
 1. Komprimiert zuerst `bigfile_gzip.data` mit `gzip`, dann `bigfile_bzip2.data` mit `bzip2` und `bigfile_xz.data` mit `xz`. Was fällt euch auf? Was ist mit den Originaldateien passiert? Schaut vielleicht in den Manpages mal nach der Option `-k`.
-2. Messt mit dem Kommando `time` wie lange die einzelenen Komprimierungsalgorithmen zur Komprimierung.
+2. Messt mit dem Kommando `time` wie lange die einzelenen Komprimierungsalgorithmen zur Komprimierung brauchen. Dazu müsst ihr die vorhandenen Dateien natürlich zuerst wieder dekomprimieren oder neue erstellen.
 ```bash
 time <kommando>
+time gzip bigfile_gzip.data
 ```
 3. Wie gross sind die resultierenden Dateien? 
 ```bash
 ls -lh <datei>
 du -h <datei>
 ```
-4. Was schliesst ihr daraus bezüglich der einzelenen Algorithmen?
-5. Ist `xz` am langsamsten, also am "schlechtesten"? Oder solltet ihr euch vielleicht auch noch das Verhalten beim Dekomprimieren anschauen? Testet doch auch das mal mit dem Kommando `time`.
+4. Was schließt ihr daraus bezüglich der einzelnen Algorithmen?
+5. Ist `xz` am langsamsten, also am "schlechtesten"? Es ist doch der neueste der drei Komprimierungsalgorithmen. Oder solltet ihr euch vielleicht auch noch das Verhalten beim **Dekomprimieren** anschauen? Testet doch auch das mal mit dem Kommando `time`. Dekomprimiert also alle drei Dateien wieder und messt auch hier die Dauer mit `time`.
 6. Mit welchem Hintergrund wurde also `xz` entwickelt? Es ist wie gesagt der neuste der drei Komprimierungsalgorithmen.
-7. Löscht vor den anderen Übungen die komprimierten Dateien, so dass nur noch die drei unkomprimierten Dateien mit der Endung `.data` im Verzeichnis übrig bleiben.
+
+>![NOTE]
+> Macht euch vielleicht Screenshots der einzelnen Ergebnisse oder arbeitet mit zwei Terminalfenstern, so dass ihr den Überblick behaltet.
 
 ### 2. Erstellen eines Tar-Archivs ohne Kompression
-Erstellt nun ein Tar-Archiv `backup.tar`, das alle Dateien aus dem aktuellen Verzeichnis enthält, also `bigfile1.data`, `bigfile2.data` und `bigfile3.data`.
+Erstellt nun ein Tar-Archiv `backup.tar`, das alle Dateien aus dem aktuellen Verzeichnis enthält, also `bigfile_gzip.data`, `bigfile_bzip2.data` und `bigfile_xz.data`.
 
->[!NOTE]
-> Wenn euch die Komprimierung und Dekomprimierung mit den drei 1GB grossen Dateien zu lange dauert, könnt ihr auch z.B. zwei andere Dateien mit jeweils 512MG erstellen und diese für die folgenden Übungen nutzen:
-```bash
-dd if=/dev/zero of=mediumfile1.data bs=1M count=512
-dd if=/dev/zero of=mediumfile2.data bs=1M count=512
-```
+Achtet darauf, dass sich ausschließlich diese drei Dateien in eurem Verzeichnis befinden.
 
 ### 3. Erstellen eines komprimierten Tar-Archivs
 Erstellt ein gzip-komprimiertes Archiv `backup.tar.gz` aus dem aktuellen Verzeichnis und überprüfe die Dateigröße. Dazu könnt ihr natürlich das in Übung 2 erstellte Archiv einfach mit `gzip` komprimieren. Das sind aber zwei Schritte, die durchgeführt werden müssen. Vielleicht geht das ja auch in einem Schritt. Kann `tar` das etwa direkt? Sucht doch in der Manpage von `tar` mal nach dem Stichwort `Compression`.
