--- a/uebungen/09.komprimierung.md
+++ b/uebungen/09.komprimierung.md
@@ -43,7 +43,7 @@ du -h <datei>
 5. Ist `xz` am langsamsten, also am "schlechtesten"? Es ist doch der neueste der drei Komprimierungsalgorithmen. Oder solltet ihr euch vielleicht auch noch das Verhalten beim **Dekomprimieren** anschauen? Testet doch auch das mal mit dem Kommando `time`. Dekomprimiert also alle drei Dateien wieder und messt auch hier die Dauer mit `time`.
 6. Mit welchem Hintergrund wurde also `xz` entwickelt? Es ist wie gesagt der neuste der drei Komprimierungsalgorithmen.
 
->![NOTE]
+>[!NOTE]
 > Macht euch vielleicht Screenshots der einzelnen Ergebnisse oder arbeitet mit zwei Terminalfenstern, so dass ihr den Überblick behaltet.
 
 ### 2. Erstellen eines Tar-Archivs ohne Kompression
