edit ex compression

--- a/uebungen/09.komprimierung.md
+++ b/uebungen/09.komprimierung.md
@@ -52,43 +52,45 @@ Erstellt nun ein Tar-Archiv `backup.tar`, das alle Dateien aus dem aktuellen Ver
 Achtet darauf, dass sich ausschließlich diese drei Dateien in eurem Verzeichnis befinden.
 
 ### 3. Erstellen eines komprimierten Tar-Archivs
-Erstellt ein gzip-komprimiertes Archiv `backup.tar.gz` aus dem aktuellen Verzeichnis und überprüfe die Dateigröße. Dazu könnt ihr natürlich das in Übung 2 erstellte Archiv einfach mit `gzip` komprimieren. Das sind aber zwei Schritte, die durchgeführt werden müssen. Vielleicht geht das ja auch in einem Schritt. Kann `tar` das etwa direkt? Sucht doch in der Manpage von `tar` mal nach dem Stichwort `Compression`.
+Erstellt nun ein gzip-komprimiertes Archiv `backup.tar.gz` aus dem `tar`-Archiv und überprüft die Dateigröße. Dazu könnt ihr das erstellte Archiv einfach mit `gzip` komprimieren. Das sind aber zwei Schritte, die nacheinander durchgeführt werden müssen. Ist doch mühsam. Vielleicht geht das ja auch in einem Schritt? Kann `tar` das etwa direkt? Sucht doch in der Manpage von `tar` einmal nach dem Stichwort `Compression`.
 
-Dekomprimiert das komprimierte Archiv anschliessend wieder mit `tar`.
+Dekomprimiert das komprimierte Archiv nun einmal mit `tar`.
 
-Führt die beiden Schritte Komprimierung und Dekomprimierung auch für die anderen beiden Komprimierungsalgorithmen `bzip2` und `xz` durch. Notiert euch die jeweiligen Optionen. 
+Führt die beiden Schritte Komprimierung und Dekomprimierung einmal für alle drei Komprimierungsalgorithmen `gzip`, `bzip2` und `xz` direkt mit `tar` durch. Notiert euch die jeweiligen Optionen. 
 
 Wie könnt ihr euch diese merken? Gibt es vielleicht eine Art Eselsbrücke dafür?
 
 ### 4. Dekomprimieren der komprimierten Archive mit `tar`
 Muss bei der Dekomprimierung mit `tar` zwingend der jeweilige Algorithmus als Option angegeben werden? Oder gibt es auch andere Möglichkeiten?
 
-### 5. Falsche Dateiendung
-Was passiert, wenn ihr eine Datei mit `bzip2` komprimierst, ihr aber die Dateiendung `.xz` verpasst (durch Umbenennen mit `mv`) und sie dann einfach mit `tar -xf` entpacken möchtet?
-
-### 6. Entpacken ohne ursprüngliches Format zu kennen
-Wie könnt ihr eine komprimierte Datei entpacken, ohne zu wissen, welches Kompressionsformat verwendet wurde? Stellt euch vor, es ist keine Dateiendung angegeben. Welches Kommando könnte hier hilfreich sein?
-
-### 7. Fehlersuche: Doppelte Kompression
-Was passiert, wenn ihr eine Datei mit `gzip` komprimierst und anschließend das komprimierte Ergebnis erneut mit `gzip` bearbeitest?
-
-Was passiert, wenn ihr eine mit `gzip` komprimierte Datei zusätzlich mit z.B. `xz` komprimiert?
-
-### 8. Versuch, ein Verzeichnis mit gzip, bzip2 oder xz zu komprimieren
+### 5. Ein Verzeichnis direkt mit gzip, bzip2 oder xz komprimieren
 Versucht, ein Verzeichnis direkt mit `gzip`, `bzip2` oder `xz` zu komprimieren, ohne `tar`. Funktioniert das? Warum bzw. warum nicht?
 
-### 9. Komprimierung mit zip
+### 6. Komprimierung mit zip
 Erstellt ein ZIP-Archiv `backup.zip`, das alle Dateien eines Verzeichnisses enthält (also z.B. alle `bigfile` Dateien). 
 
 Wie unterscheidet sich das Verhalten von `zip` im Vergleich zu `tar` mit `gzip`? Ihr könnt auch hier die Kompressionsgeschwindigkeit und resultierende Dateigrösse vergleichen.
 
 Hierzu müsst ihr `zip` aber erst einmal installieren: Als `root` mit `apt install zip`.
 
-### 11. Komprimierungsalgorithmen 
+## Weiterführende Übungen
+
+### 7. Falsche Dateiendung
+Was passiert, wenn ihr eine Datei mit `bzip2` komprimierst, ihr aber die Dateiendung `.xz` verpasst (durch Umbenennen mit `mv`) und sie dann einfach mit `tar -xf` entpacken möchtet?
+
+### 8. Entpacken ohne ursprüngliches Format zu kennen
+Wie könnt ihr eine komprimierte Datei entpacken, ohne zu wissen, welches Kompressionsformat verwendet wurde? Stellt euch vor, es ist keine Dateiendung angegeben. Welches Kommando könnte hier hilfreich sein?
+
+### 9. Doppelte Kompression
+1. Was passiert, wenn ihr eine Datei mit `gzip` komprimiert und anschließend die komprimierte Datei erneut mit `gzip` komprimiert?
+
+2. Was passiert, wenn ihr eine mit `gzip` komprimierte Datei zusätzlich mit z.B. `xz` komprimiert?
+
+### 10. Komprimierungsalgorithmen 
 Erstellt eine weitere Testdatei `bigfile_random.data` mit folgendem Kommando:
 ```bash
 dd if=/dev/random of=bigfile_random.data bs=1M count=1024
 ```
-Ihr verwendet hier die Gerätesdatei `/dev/random`. Diese produziert keine Nullbytes, sondern "Zufall".
+Ihr verwendet hier die Gerätedatei `/dev/random`. Diese produziert keine Nullbytes, sondern "Pseudozufall".
 
 Komprimiert diese Datei nun mit einem Algorithmus eurer Wahl oder auch mit allen drei. Was fällt euch auf? Was könnt ihr daraus über das generelle Vorgehen bzw. die Arbeitsweise eines Komprimierungsalgorithmus schliessen?
