--- a/uebungen/09.komprimierung.md
+++ b/uebungen/09.komprimierung.md
@@ -29,7 +29,10 @@ dd if=/dev/zero of=mediumfile_gzip.data bs=1M count=512
 Verwendet nacheinander `gzip`, `bzip2` und `xz`, um eine einzelne Datei direkt zu komprimieren. 
 
 1. Komprimiert zuerst `bigfile_gzip.data` mit `gzip`, dann `bigfile_bzip2.data` mit `bzip2` und `bigfile_xz.data` mit `xz`. Was fällt euch auf? Was ist mit den Originaldateien passiert? Schaut vielleicht in den Manpages mal nach der Option `-k`.
-2. Messt mit dem Kommando `time` wie lange die einzelenen Komprimierungsalgorithmen zur Komprimierung brauchen. Dazu müsst ihr die vorhandenen Dateien natürlich zuerst wieder dekomprimieren oder neue erstellen.
+2. Messt mit dem Kommando `time` wie lange die einzelnen Komprimierungsalgorithmen zur Komprimierung brauchen. 
+
+>[!DANGER]
+> Falls ihr die Dateien bereits einmal komprimiert und dekomprimiert haben solltet, löscht diese wieder und erstellt für die Messung der Zeiten und Größen **neue** Dateien. Ansonsten werden die Ergebnisse verfälscht, da in unserem speziellen Fall mit den Dateien mit Nullbytes diese nicht wieder in den Originalzustand versetzt werden.
 ```bash
 time <kommando>
 time gzip bigfile_gzip.data
