--- a/uebungen/09.komprimierung.md
+++ b/uebungen/09.komprimierung.md
@@ -55,41 +55,38 @@ Erstellt nun ein Tar-Archiv `backup.tar`, das alle Dateien aus dem aktuellen Ver
 Achtet darauf, dass sich ausschließlich diese drei Dateien in eurem Verzeichnis befinden.
 
 ### 3. Erstellen eines komprimierten Tar-Archivs
-Erstellt nun ein gzip-komprimiertes Archiv `backup.tar.gz` aus dem `tar`-Archiv und überprüft die Dateigröße. Dazu könnt ihr das erstellte Archiv einfach mit `gzip` komprimieren. Das sind aber zwei Schritte, die nacheinander durchgeführt werden müssen. Ist doch mühsam. Vielleicht geht das ja auch in einem Schritt? Kann `tar` das etwa direkt? Sucht doch in der Manpage von `tar` einmal nach dem Stichwort `Compression`.
+Erstellt nun ein gzip-komprimiertes Archiv `backup.tar.gz` aus dem `tar`-Archiv und überprüft die Dateigröße. Dazu könnt ihr das erstellte Archiv einfach mit `gzip` komprimieren. Das sind aber zwei Schritte, die nacheinander durchgeführt werden müssen. Ist doch mühsam. Vielleicht geht das ja auch in einem Schritt? Kann `tar` das etwa direkt? 
 
-Dekomprimiert das komprimierte Archiv nun einmal mit `tar`.
-
-Führt die beiden Schritte Komprimierung und Dekomprimierung einmal für alle drei Komprimierungsalgorithmen `gzip`, `bzip2` und `xz` direkt mit `tar` durch. Notiert euch die jeweiligen Optionen. 
-
-Wie könnt ihr euch diese merken? Gibt es vielleicht eine Art Eselsbrücke dafür?
+1. Sucht doch in der Manpage von `tar` einmal nach dem Stichwort `Compression` bzw. nach `Kompression` falls eure Manpage auf Deutsch ist und erstellt ein komprimiertes Archiv mit `tar` in einem Rutsch.
+2. Dekomprimiert das komprimierte Archiv nun einmal mit `tar`.
+3. Führt die beiden Schritte Komprimierung und Dekomprimierung einmal für alle drei Komprimierungsalgorithmen `gzip`, `bzip2` und `xz` direkt mit `tar` durch. Notiert euch die jeweiligen Optionen. 
+4. Wie könnt ihr euch diese merken? Gibt es vielleicht eine Art Eselsbrücke dafür?
 
 ### 4. Dekomprimieren der komprimierten Archive mit `tar`
 Muss bei der Dekomprimierung mit `tar` zwingend der jeweilige Algorithmus als Option angegeben werden? Oder gibt es auch andere Möglichkeiten?
 
-### 5. Ein Verzeichnis direkt mit gzip, bzip2 oder xz komprimieren
+### 5. Falsche Dateiendung
+1. Was passiert, wenn ihr eine Datei z.B. mit `bzip2` komprimiert, ihr aber aus Versehen die Dateiendung `.gz` verpasst? Ist sie dann `gzip` komprimiert? Überprüft die Datei mit dem Kommando `file`. 
+2. Was passiert, wenn ihr sie nun mit `tar -xf` (ohne Angabe des Komprimierungsalgorithmus) entpacken möchtet?
+
+### 6. Ein Verzeichnis direkt mit gzip, bzip2 oder xz komprimieren
 Versucht, ein Verzeichnis direkt mit `gzip`, `bzip2` oder `xz` zu komprimieren, ohne `tar`. Funktioniert das? Warum bzw. warum nicht?
 
-### 6. Komprimierung mit zip
+### 7. Komprimierung mit zip
 Erstellt ein ZIP-Archiv `backup.zip`, das alle Dateien eines Verzeichnisses enthält (also z.B. alle `bigfile` Dateien). 
 
-Wie unterscheidet sich das Verhalten von `zip` im Vergleich zu `tar` mit `gzip`? Ihr könnt auch hier die Kompressionsgeschwindigkeit und resultierende Dateigrösse vergleichen.
+Wie unterscheidet sich das Verhalten von `zip` im Vergleich zu `tar` mit `gzip`, `bzip2` und `xz`? Ihr könnt (falls ihr wollt) auch hier einmal die Kompressionsgeschwindigkeit und resultierende Dateigrösse vergleichen.
 
-Hierzu müsst ihr `zip` aber erst einmal installieren: Als `root` mit `apt install zip`.
+> [!NOTE]
+> `zip` ist kein natives Linux Tool, daher ist es standardmässig nicht installiert. Nachholen könnt ihr das mit `apt install zip` als `root`.
 
 ## Weiterführende Übungen
 
-### 7. Falsche Dateiendung
-Was passiert, wenn ihr eine Datei mit `bzip2` komprimierst, ihr aber die Dateiendung `.xz` verpasst (durch Umbenennen mit `mv`) und sie dann einfach mit `tar -xf` entpacken möchtet?
-
-### 8. Entpacken ohne ursprüngliches Format zu kennen
-Wie könnt ihr eine komprimierte Datei entpacken, ohne zu wissen, welches Kompressionsformat verwendet wurde? Stellt euch vor, es ist keine Dateiendung angegeben. Welches Kommando könnte hier hilfreich sein?
-
-### 9. Doppelte Kompression
+### 8. Doppelte Kompression
 1. Was passiert, wenn ihr eine Datei mit `gzip` komprimiert und anschließend die komprimierte Datei erneut mit `gzip` komprimiert?
-
 2. Was passiert, wenn ihr eine mit `gzip` komprimierte Datei zusätzlich mit z.B. `xz` komprimiert?
 
-### 10. Komprimierungsalgorithmen 
+### 9. Komprimierungsalgorithmen 
 Erstellt eine weitere Testdatei `bigfile_random.data` mit folgendem Kommando:
 ```bash
 dd if=/dev/random of=bigfile_random.data bs=1M count=1024
