fix ex processes

--- a/uebungen/10.prozesse-1.md
+++ b/uebungen/10.prozesse-1.md
@@ -16,14 +16,13 @@ Zeige **alle** laufenden Prozesse auf deinem System an.
 ## Übung 3: Prozesse nach Ressourcenverbrauch sortieren
 Finde die Prozesse, die am meisten CPU und RAM verbrauchen.
 - Starte `top`
-- Sortiere nach CPU-Verbrauch (Taste 'P' in top)
-- Sortiere nach RAM-Verbrauch (Taste 'M' in top)
+- Sortiere nach CPU-Verbrauch (Taste 'P' (großes 'P') in `top`)
+- Sortiere nach RAM-Verbrauch (Taste 'M' (großes 'M') in `top`)
 
 ## Übung 4: Prozess in den Hintergrund schicken
-Starte einen Prozess, der lange läuft, z.B. mit `sleep` oder `ping`:
+Starte einen Prozess, der lange läuft, z.B. mit `sleep`:
 ```bash
-sleep 300 &
-ping google.com &
+sleep 300
 ```
 > [!NOTE]
 > Das Kommando `sleep` macht einfach gar nichts für die Anzahl der Sekunden, die wir angeben. Wird z.B. in Skripten benutzt um ein wenig zu warten, dass eine bestimmte Aufgabe erfüllt wurde.
