--- a/uebungen/10.prozesse-1.md
+++ b/uebungen/10.prozesse-1.md
@@ -43,7 +43,6 @@ Nutze erneut `STRG z` um den Prozess in den Hintergrund zu schicken (starte ggf.
 Wir können Prozesse auch direkt nach dem Start in den Hintergrund schicken und starten, in dem wir ein `&` ans Ende der Eingabe setzen:
 ```bash
 sleep 300 &
-ping google.com &
 ```
 - Liste alle Background-Jobs mit `jobs`
 - Bringe nun `ping` wieder in den Vordergrund mit `fg`. Dazu musst du `fg` den Index von `ping` übergeben
@@ -54,10 +53,18 @@ ping google.com &
 ## Übung 6: Prozess-IDs finden
 Finde die PID verschiedener Prozesse.
 
-Öffne zwei Terminals und starte in einem das Kommando `sleep 300`, schicke den Prozess mit `STRG z` in den Hintergrund und starte ihn dort wieder mit `bg`. Der Prozess läuft nun im Hintergrund weiter. 
-Versuche nun, diesen Prozess aus dem anderen Terminal heraus zu beenden. Dafür musst du mit `kill` ein bestimmtes Signal an diesen Prozess senden. `kill` akzeptiert aber nur PIDs und keine Kommandos als Argument.
-- Verwende `ps -ef | grep sleep` um die PID des Prozesses zu ermitteln
-- Beende den Prozess mit `kill` und der Angabe der PID
+Starte das Kommando `ping google.com &`, so dass es im Hintergrund ausgeführt wird. 
+
+Blöderweise siehst du jetzt trotzdem die Meldungen von `ping`, dass `google.com` erreichbar ist. Versuche den Prozess nun mit `STRG c` abzubrechen. Das klappt nicht. 
+
+1. Warum nicht? 
+
+2. Versuche nun, diesen Prozess aus dem anderen Terminal heraus zu beenden. 
+
+Dafür musst du mit `kill` ein bestimmtes Signal an diesen Prozess senden. `kill` akzeptiert aber nur PIDs und keine Kommandos als Argument.
+
+- Verwende `ps -ef`, eine Pipe und das Kommando `grep`  um die PID des Prozesses zu ermitteln
+- Beende den nun Prozess mit `kill` und der Angabe seiner PID
 - Prüfe anschliessend mit `jobs` den Status des Prozesses
 - Informiere dich in der Manpage von `kill`, welches Signal an diesen Prozess gesendet wurde
 - Schau dir die Liste aller Signale mit dem Kommando `kill -l` an. Wichtig sind vielleicht folgende Signale:
@@ -69,7 +76,7 @@ Versuche nun, diesen Prozess aus dem anderen Terminal heraus zu beenden. Dafür 
   - `18) SIGCONT`
   - `19) SIGSTOP`
 
-Starte einen neuen Prozess `sleep 1200` und schicke ihn in den Hintergrund mit `STRG z`. Prüfe den Status mit `jobs`. Der Prozess ist angehalten. 
+3. Starte einen neuen Prozess `sleep 1200` und schicke ihn in den Hintergrund mit `STRG z`. Prüfe den Status mit `jobs`. Der Prozess ist angehalten. 
 - Versuche nun, diesen Prozess mit dem Kommando `kill` und dem entsprechenden Signal im Hintergrund wieder auszuführen. Prüfe das ganze mit `jobs`.
 - Mit `kill` können Signale auf mehrere Arten gesendet werden: Über die Angabe der Signalnummer, des Namens, mit Option, ohne Option. Wie verschiedenen Möglichkeiten findest du?
 - Halte den Prozess nun an. Auch wieder mit `kill` und dem entsprechenden Signal
