--- a/uebungen/10.prozesse-1.md
+++ b/uebungen/10.prozesse-1.md
@@ -50,24 +50,25 @@ sleep 300 &
 > [!NOTE]
 > Wir das Zeichen `&` ja schon von den Redirects zur Angabe einer Kanalnummer bzw. Filedescriptors. In diesem Fall hat es jedoch eine andere Bedeutung, es ist ein Shell-Operator, der das Kommando im Hintergrund ausführt. Es gibt hier keinen Zusammenhang, genauso wie das `*` in der Shell einmal eine Wildcard ist und in der Mathematik das Zeichen für die Multiplikation.
 
-## Übung 6: Prozess-IDs finden
-Finde die PID verschiedener Prozesse.
+## Übung 6: Ping ausser Rand und Band
 
 Starte das Kommando `ping google.com &`, so dass es im Hintergrund ausgeführt wird. 
 
-Blöderweise siehst du jetzt trotzdem die Meldungen von `ping`, dass `google.com` erreichbar ist. Versuche den Prozess nun mit `STRG c` abzubrechen. Das klappt nicht. 
+Blöderweise siehst du jetzt trotzdem die Meldungen von `ping`, dass `google.com` erreichbar ist, deine Shell wird fortlaufend zugemüllt. Kannst du noch Eingaben machen? Versuche den Prozess nun mit `STRG c` zu beenden. Das klappt aber nicht. Warum nur?
 
-1. Warum nicht? 
+1. Mach dir Gedanken, warum das so ist. Der Prozess ist doch in den Hintergrund geschickt worden, die Meldungen erscheinen aber immer noch (im Vordergrund). Du kannst dir das erklären, wir haben in einem anderen Zusammenhang schon darüber gesprochen. Kleiner Tipp: Denke einmal daran, was generell mit jedem Prozess passiert, der gestartet wird...
 
-2. Versuche nun, diesen Prozess aus dem anderen Terminal heraus zu beenden. 
+2. Versuche nun, diesen Prozess aus einem anderen Terminal heraus zu beenden. 
 
 Dafür musst du mit `kill` ein bestimmtes Signal an diesen Prozess senden. `kill` akzeptiert aber nur PIDs und keine Kommandos als Argument.
 
-- Verwende `ps -ef`, eine Pipe und das Kommando `grep`  um die PID des Prozesses zu ermitteln
-- Beende den nun Prozess mit `kill` und der Angabe seiner PID
-- Prüfe anschliessend mit `jobs` den Status des Prozesses
-- Informiere dich in der Manpage von `kill`, welches Signal an diesen Prozess gesendet wurde
-- Schau dir die Liste aller Signale mit dem Kommando `kill -l` an. Wichtig sind vielleicht folgende Signale:
+- Verwende `ps -ef` um dir alle laufenden Prozesse anzuzeigen, eine Pipe und das Kommando `grep`  um die PID von `ping` zu ermitteln
+- Beende nun den Prozess mit `kill` und der Angabe seiner PID
+- Hast du jetzt die Kontrolle über deine Shell zurück? 
+
+## Übung 7: Signale mit kill an Prozesse senden
+- Informiere dich in der Manpage von `kill`, welches Signal genau in Übung 6 an `ping` gesendet wurde, also welches Signal `kill` standardmässig versendet
+- Schau dir einmal die Liste aller Signale mit dem Kommando `kill -l` an. Wichtig sind vielleicht folgende Signale:
   - `1) SIGHUP`
   - `2) SIGINT`
   - `3) SIGQUIT`
@@ -76,21 +77,25 @@ Dafür musst du mit `kill` ein bestimmtes Signal an diesen Prozess senden. `kill
   - `18) SIGCONT`
   - `19) SIGSTOP`
 
-3. Starte einen neuen Prozess `sleep 1200` und schicke ihn in den Hintergrund mit `STRG z`. Prüfe den Status mit `jobs`. Der Prozess ist angehalten. 
-- Versuche nun, diesen Prozess mit dem Kommando `kill` und dem entsprechenden Signal im Hintergrund wieder auszuführen. Prüfe das ganze mit `jobs`.
-- Mit `kill` können Signale auf mehrere Arten gesendet werden: Über die Angabe der Signalnummer, des Namens, mit Option, ohne Option. Wie verschiedenen Möglichkeiten findest du?
-- Halte den Prozess nun an. Auch wieder mit `kill` und dem entsprechenden Signal
-- Brich den Prozess nun hart ab - töte ihn!
+Starte nun einen neuen Prozess `sleep 666` und schicke ihn in den Hintergrund mit `STRG z`. Prüfe den Status mit `jobs`. Der Prozess ist angehalten. 
 
-Informiere dich über den Unterschied von z.B. `SIGTERM` und `SIGINT` zu `SIGKILL`.
+1. Versuche nun, diesen Prozess mit dem Kommando `kill` und dem entsprechenden Signal **aus einem anderen Terminal heraus** im Hintergrund wieder auszuführen bzw. fortzusetzen. Prüfe das ganze mit `jobs`.
+2. Halte den Prozess nun an. Auch wieder mit `kill` und dem entsprechenden Signal aus dem anderen Terminal heraus
+3. Brich den Prozess nun hart ab - töte ihn!
+4. Informiere dich über den Unterschied von z.B. `SIGTERM` und `SIGINT` zu `SIGKILL`.
+5. Mit `kill` können Signale auf mehrere Arten gesendet werden: Über die Angabe der Signalnummer, des Signalnamens, Langoption, Kurzoption etc. Wie viele verschiedene Möglichkeiten findest du?
 
-## Übung 7: Prozesse beenden
+## Übung 7: pkill und pgrep
 Starte drei `sleep 1000 &` Prozesse im Hintergrund.
 
 Nutze nun das Kommando `pkill`, welchem nicht eine PID, sondern ein Name bzw. Pattern übergeben werden kann. Was passiert, wenn du `pkill sleep` ausführst?
 
-## Übung 8: Prozess-Signale und Tastenkombinationen
-Bestimmte Tastenkombinationen senden im Endeffekt nur Signale an den momentan aktiven Prozess. Versuche herauszufinden, welche Signale die Tastenkombinationen `STRG z` und `STRG c` senden.
+Informiere dich auch über `pgrep`. Wiederhole dazu vielleicht das Beispiel mit `ping` aus Übung 6. Könnte `pgrep` hier nützlich sein? Und vielleicht auch `pkill`?
 
-Versuche, anstatt der Tastenkombination das entsprechende Signal mit `kill` an einen Prozess zu senden.
+## Übung 8: Prozess-Signale und Tastenkombinationen
+Bestimmte Tastenkombinationen senden im Endeffekt nur Signale an den momentan aktiven Prozess. 
+
+1. Versuche herauszufinden, welche Signale die Tastenkombinationen `STRG z` und `STRG c` senden.
+2. Versuche, anstatt der Tastenkombination das entsprechende Signal mit `kill` an einen Prozess zu senden.
+3. Es gibt auch die Tastenkombination `STRG d`. Diese beendet z.B. eine laufende Eingabe. Sendet diese Tastenkombination auch ein Signal?
 
