edit ex processes

--- a/uebungen/10.prozesse-1.md
+++ b/uebungen/10.prozesse-1.md
@@ -4,7 +4,7 @@
 - Zeige die laufenden Prozesse in der aktuellen Shell an. 
 - Verwende dazu `ps` ohne Optionen
 - Starte anschließend eine weitere Shell mit dem Kommando `bash`. 
-- Führe das Kommando `ps` erneut aus. Welches ist die *Eltern-* und welches die *Kind-*Shell? Woran kann man das erkennen?
+- Führe das Kommando `ps` erneut aus. Welches ist die *Eltern-* und welches die *Kind-* Shell? Woran kann man das erkennen?
 
 ## Übung 2: Alle Prozesse anzeigen
 Zeige **alle** laufenden Prozesse auf deinem System an.
@@ -28,18 +28,21 @@ sleep 300
 > Das Kommando `sleep` macht einfach gar nichts für die Anzahl der Sekunden, die wir angeben. Wird z.B. in Skripten benutzt um ein wenig zu warten, dass eine bestimmte Aufgabe erfüllt wurde.
 
 Du kannst nun keine Kommandos mehr ausführen, da du in einer Shell nur einen einzelnen Prozess im **Vordergrund** ausführen kannst. Du hast nun entweder die Möglichkeit, diesen Prozess zu beenden, oder ihn in den Hintergrund zu schicken. Wir probieren letzteres:
-- Drücke nun die Tastenkombination `STRG z`
+- Drücke die Tastenkombination `STRG z`
 - Du kannst wieder Eingaben machen, yeah! Aber was ist mit dem Prozess passiert? Du solltest eine Ausgabe sehen wie:
 ```bash
 [1]+  Stopped                 sleep 300
 ```
 Der Prozess wurde in den Hintergrund geschickt **und** angehalten/gestoppt. Du kannst dir mit dem Kommando `jobs` alle sich im Hintergrund befindlichen Prozesse und deren Status anzeigen lassen.
 
-Hole den Prozess nun mit dem Kommando `fg` wieder in den Forgergrund und starte ihn damit gleichzeit wieder.
+Hole den Prozess nun mit dem Kommando `fg` wieder **in den Vordergrund** und starte ihn damit gleichzeit wieder.
 
-Nutze erneut `STRG z` um den Prozess in den Hintergrund zu schicken (starte ggf. einen neuen), gib dann `bg` ein um den Prozess im Hintergrund fortzusetzen und prüfe das Ergebnis mit `jobs`
+Nutze erneut `STRG z` um den Prozess in den Hintergrund zu schicken (starte ggf. einen neuen), gib dann `bg` ein um den Prozess **im Hintergrund fortzusetzen** und prüfe das Ergebnis mit `jobs`
 
-## Übung 5: Prozess im Hintergrund starten
+## Übung 5 Unterschied `jobs` und `ps`
+Informiere dich generell über die Kommandos `ps` und `jobs`. Was ist der Unterschied? Warum hat `jobs` keine Manpage? Probiere einmal `help jobs` oder suche in der Manpage der `bash` nach `JOB CONTROL`.
+
+## Übung 6: Prozess im Hintergrund starten
 Wir können Prozesse auch direkt nach dem Start in den Hintergrund schicken und starten, in dem wir ein `&` ans Ende der Eingabe setzen:
 ```bash
 sleep 300 &
@@ -50,7 +53,7 @@ sleep 300 &
 > [!NOTE]
 > Wir das Zeichen `&` ja schon von den Redirects zur Angabe einer Kanalnummer bzw. Filedescriptors. In diesem Fall hat es jedoch eine andere Bedeutung, es ist ein Shell-Operator, der das Kommando im Hintergrund ausführt. Es gibt hier keinen Zusammenhang, genauso wie das `*` in der Shell einmal eine Wildcard ist und in der Mathematik das Zeichen für die Multiplikation.
 
-## Übung 6: Ping ausser Rand und Band
+## Übung 7: Ping ausser Rand und Band
 
 Starte das Kommando `ping google.com &`, so dass es im Hintergrund ausgeführt wird. 
 
@@ -66,8 +69,8 @@ Dafür musst du mit `kill` ein bestimmtes Signal an diesen Prozess senden. `kill
 - Beende nun den Prozess mit `kill` und der Angabe seiner PID
 - Hast du jetzt die Kontrolle über deine Shell zurück? 
 
-## Übung 7: Signale mit kill an Prozesse senden
-- Informiere dich in der Manpage von `kill`, welches Signal genau in Übung 6 an `ping` gesendet wurde, also welches Signal `kill` standardmässig versendet
+## Übung 8: Signale mit kill an Prozesse senden
+- Informiere dich in der Manpage von `kill`, welches Signal genau in Übung 7 an `ping` gesendet wurde, also welches Signal `kill` standardmässig versendet
 - Schau dir einmal die Liste aller Signale mit dem Kommando `kill -l` an. Wichtig sind vielleicht folgende Signale:
   - `1) SIGHUP`
   - `2) SIGINT`
@@ -92,7 +95,25 @@ Nutze nun das Kommando `pkill`, welchem nicht eine PID, sondern ein Name bzw. Pa
 
 Informiere dich auch über `pgrep`. Wiederhole dazu vielleicht das Beispiel mit `ping` aus Übung 6. Könnte `pgrep` hier nützlich sein? Und vielleicht auch `pkill`?
 
-## Übung 8: Prozess-Signale und Tastenkombinationen
+## Übung 8: Abhängigkeit von Prozessen
+
+Starte in einer Shell ein beliebiges Kommando, welches länger läuft (`ping`, `sleep`). Ermittle dann aus einem anderen Terminal heraus die PID der Shell, in welcher du dieses Kommando gestartet hast. Beende nun den Prozess dieser Shell. 
+
+Was passiert mit dem Kommando, welches darin gestartet wurde? Könnte das in bestimmten Situationen Probleme verursachen? Denke vielleicht mal darüber nach, was passiert, wenn du z.B. über `ssh` ein Upgrade eines System durchführst und dabei die SSH Verbindung abbricht...
+
+Informiere dich in diesem Zusammenhang über das Kommando `nohup` und Terminal Mutliplexer wie `screen`, `tmux`, `zellij` ...
+
+Du könntest mal wieder einen Prozess wie `ping` über `nohup` starten der stellvertretend für einen Prozess steht der lange läuft, wie ein Upgrade, Kopiervorgang oder so. 
+```bash
+nohup ping google.de &
+```
+Drücke danach einmal die Enter-Taste um deinen Prompt zurück zu bekommen. Beende nun aus einem anderen Terminal heraus die Shell, in der `ping` gestartet wurde. 
+
+Ist `ping` jetzt auch beendet worden? Suche danach mit `ps` und `grep` oder nutze direkt `pgrep`.
+
+Was kannst du daraus über ein *Best Practice* bezüglich Systemupgrades über SSH schliessen?
+
+## Übung 9: Prozess-Signale und Tastenkombinationen
 Bestimmte Tastenkombinationen senden im Endeffekt nur Signale an den momentan aktiven Prozess. 
 
 1. Versuche herauszufinden, welche Signale die Tastenkombinationen `STRG z` und `STRG c` senden.
